--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hjs": "~0.0.6",
+    "jwt-simple": "^0.4.0",
+    "mongodb": "^2.1.2",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "node-slack": "0.0.7",
+    "serve-favicon": "~2.3.0",
+    "shortid": "^2.2.4"
   }
 }
