--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.6.1",
     "node-slack": "0.0.7",
     "serve-favicon": "~2.3.0",
-    "shortid": "^2.2.4"
+    "shortid": "^2.2.4",
+    "webshot": "^0.16.0"
   }
 }
