Git ignore changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-.idea/
-.idea/*
-node_modules/
-node_modules/*
-voeux/
-voeux/*
-npm-debug.log
-compass/.sass-cache
-images
-images/*
+/.idea/
+/.idea/*
+/node_modules/
+/node_modules/*
+/voeux/
+/voeux/*
+/npm-debug.log
+/compass/.sass-cache
+/images
+/images/*
